Added Flex for Nav

--- a/index.html
+++ b/index.html
@@ -3,16 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Landing Page</title>
 </head>
 <body>
     <div class="section" id="nav-bar">
-        <img class="nav-item" src="" id="logo"></div>
+        <img class="nav-item" src="./Images/plane.jpg" id="logo">
         <div class="nav-item" id="nav-btns">
             <button class="nav-button" id="home">Home</button>
             <button class="nav-button" id="about">About</button>
             <button class="nav-button" id="learn-more">Learn More</button>
         </div>
+
         <div class="nav-item" id="nav-cta">
             <button class="nav-button" id="learn-more">Sign Up Today</button>
         </div>
@@ -21,7 +23,7 @@
 
     </div>
     <div class="section" id="steps">
-        
+
     </div>
     <div class="section" id="testimonial">
 
