Added Basic CSS For Nav

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <div class="section" id="nav-bar">
         <img class="nav-item" src="./Images/plane.jpg" id="logo">
+
         <div class="nav-item" id="nav-btns">
             <button class="nav-button" id="home">Home</button>
             <button class="nav-button" id="about">About</button>
@@ -17,6 +18,7 @@
 
         <div class="nav-item" id="nav-cta">
             <button class="nav-button" id="learn-more">Sign Up Today</button>
+            <button class="nav-button" id="learn-more">Log In </button>
         </div>
     </div>
     <div class="section" id="hero">
