Updated Font-Family globally

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         </div>
 
         <div class="nav-item" id="nav-cta">
-            <button class="nav-button" id="learn-more">Sign Up Today</button>
-            <button class="nav-button" id="learn-more">Log In </button>
+            <button class="nav-button" id="sign-up">Sign Up</button>
+            <button class="nav-button" id="log-in">Log In </button>
         </div>
     </div>
     <div class="section" id="hero">
