Finished Nav-Bar

--- a/index.html
+++ b/index.html
@@ -8,17 +8,22 @@
 </head>
 <body>
     <div class="section" id="nav-bar">
-        <img class="nav-item" src="./Images/plane.jpg" id="logo">
-
+        <div class="nav-item" id="logo">
+            <img src="./Images/vpn.png" id="vpn" alt="logo">
+            <h4>ExpressVPN</h4>
+        </div>
         <div class="nav-item" id="nav-btns">
             <button class="nav-button" id="home">Home</button>
             <button class="nav-button" id="about">About</button>
             <button class="nav-button" id="learn-more">Learn More</button>
+            <button class="nav-button" id="Features"> Features</button>
+            <button class="nav-button" id="Pricing">Pricing</button>
         </div>
 
         <div class="nav-item" id="nav-cta">
-            <button class="nav-button" id="sign-up">Sign Up</button>
             <button class="nav-button" id="log-in">Log In </button>
+            <button class="nav-button" id="sign-up">Sign Up</button>
+           
         </div>
     </div>
     <div class="section" id="hero">
