Added Base Content Hero Section

--- a/index.html
+++ b/index.html
@@ -26,17 +26,31 @@
            
         </div>
     </div>
-    <div class="section" id="hero">
+    <div class="main">
 
-    </div>
-    <div class="section" id="steps">
+        <div class="section" id="hero">
+            <div class="col" id="text">
+                <h2 id="CTACatchLine"><b>Want anything to be easy with ExpressVPN</b></h2>
+                <h5 id="CTAUnderText">Provide a network that easily satirfies your needs</h5>
+                <button class="nav-button" id="CTA-Button">Get Started</button>
+            </div>
 
-    </div>
-    <div class="section" id="testimonial">
+            <div class="col" id="img">
+                <img src="./Images/hero-img.jpg" alt=".">
+            </div>
+            
+        </div>
 
-    </div>
-    <div class="section" id="features">
 
+        <div class="section" id="steps">
+
+        </div>
+        <div class="section" id="testimonial">
+
+        </div>
+        <div class="section" id="features">
+
+        </div>
     </div>
     <div class="section" id="footer"></div>
 
