Added base for stats section

--- a/index.html
+++ b/index.html
@@ -42,9 +42,37 @@
         </div>
 
 
-        <div class="section" id="steps">
-
+        <div class="section" id="stats">
+            <div class="item" id="Users">
+                <div class="col">
+                    <img src="" alt="">
+                </div>
+                <div class="col" id="txt">
+                    <h4 id="numUsers">44</h4>
+                    <h5 id="txtUsers">Users</h5>
+                </div>
+            </div>
+            <div class="item" id="Locations">
+                <div class="col">
+                    <img src="" alt="">
+                </div>
+                <div class="col" id="txt">
+                    <h4 id="numLocations">44</h4>
+                    <h5 id="txtLocations">Locations</h5>
+                </div>
+            </div>
+            <div class="item" id="Servers">
+                <div class="col">
+                    <img src="" alt="">
+                </div>
+                <div class="col" id="txt">
+                    <h4 id="numServers">44</h4>
+                    <h5 id="txtServers">Servers</h5>
+                </div>
+            </div>
+  
         </div>
+
         <div class="section" id="testimonial">
 
         </div>
