Added base for features section

--- a/index.html
+++ b/index.html
@@ -84,13 +84,69 @@
   
         </div>
 
-        <div class="section" id="testimonial">
-
-        </div>
         <div class="section" id="features">
+            <div class="col feat">
+                <img src="./Images/pexels-kevin-paster-929016-1923286.jpg" id="featIMG" alt="laptop">
+            </div>
+            <div class="col feat" id="featMainContent">
+                <h3>We Provide Many Features You Can Use</h3>
+                <h5>Express VPN has your back</h5>
+                <div class="featContainer">
+                    <div class="featGroup">
+                        <img src="" class="">
+                        <p class="featItem">Secure</p>
+                    </div>
+                    <div class="featGroup">
+                        <img src="" class="">
+                        <p class="featItem">Secure</p>
+                    </div>
+                    <div class="featGroup">
+                        <img src="" class="">
+                        <p class="featItem">Secure</p>
+                    </div>
+                    <div class="featGroup">
+                        <img src="" class="">
+                        <p class="featItem">Secure</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <img src="" id="map">
 
+        <div class="section" id="testimonial">
+            <h3></h3>
+            <h5></h5>
+            <div class="row" id="testContainer">
+                <div class="testItem">
+                    <div class="testHeading">
+                        <img src="" class="testIMG">
+                        <div class="testName">
+
+                        </div>
+                    </div>
+                </div>
+                <div class="testItem">
+                    <div class="testHeading">
+                        <img src="" class="testIMG">
+                        <div class="testName">
+
+                        </div>
+                    </div>
+                </div>
+                <div class="testItem">
+                    <div class="testHeading">
+                        <img src="" class="testIMG">
+                        <div class="testName">
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+            
+            
         </div>
     </div>
+
     <div class="section" id="footer"></div>
 
 </body>
