Updated Features CSS

--- a/index.html
+++ b/index.html
@@ -89,23 +89,23 @@
                 <img src="./Images/pexels-kevin-paster-929016-1923286.jpg" id="featIMG" alt="laptop">
             </div>
             <div class="col feat" id="featMainContent">
-                <h3>We Provide Many Features You Can Use</h3>
-                <h5>Express VPN has your back</h5>
+                <h3 id="bigHeader">We Provide Many Features <br> You Can Use</h3>
+               
                 <div class="featContainer">
                     <div class="featGroup">
-                        <img src="" class="">
+                        <img src="./Images/check.png" class="check">
                         <p class="featItem">Secure</p>
                     </div>
                     <div class="featGroup">
-                        <img src="" class="">
+                        <img src="./Images/check.png" class="check">
                         <p class="featItem">Secure</p>
                     </div>
                     <div class="featGroup">
-                        <img src="" class="">
+                        <img src="./Images/check.png" class="check">
                         <p class="featItem">Secure</p>
                     </div>
                     <div class="featGroup">
-                        <img src="" class="">
+                        <img src="./Images/check.png" class="check">
                         <p class="featItem">Secure</p>
                     </div>
                 </div>
