--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
         <img src="" id="map">
 
         <div class="section" id="testimonial">
-            <h3></h3>
-            <h5></h5>
+            <h3>Trusted by Thousands of Happy Customers</h3>
+            <h5>Here are stories of indiviudals we helped out</h5>
             <div class="row" id="testContainer">
                 <div class="testItem">
                     <div class="testHeading">
