Updated feat sections

--- a/index.html
+++ b/index.html
@@ -85,12 +85,13 @@
         </div>
 
         <div class="section" id="features">
-            <div class="col feat">
+            <div class="col feat img">
                 <img src="./Images/pexels-kevin-paster-929016-1923286.jpg" id="featIMG" alt="laptop">
             </div>
             <div class="col feat" id="featMainContent">
-                <h3 id="bigHeader">We Provide Many Features <br> You Can Use</h3>
-               
+                <h3 id="bigHeader">We Provide Many <br>Feature You Can Use</h3>
+                <h5>Random text random text random text random random</h5>
+        
                 <div class="featContainer">
                     <div class="featGroup">
                         <img src="./Images/check.png" class="check">
